Add drizzle-orm setup

--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "pastr",
   "scripts": {
-    "dev": "wrangler dev src/index.ts",
+    "dev": "wrangler dev --local src/index.ts",
+    "db:generate": "drizzle-kit generate --schema=src/db/schema.ts --dialect=sqlite",
+    "db:up": "drizzle-kit up:sqlite",
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.10.0",
     "crypto": "^1.0.1",
+    "drizzle-orm": "^0.33.0",
     "hono": "^4.5.10"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
-    "wrangler": "^3.57.2"
+    "drizzle-kit": "^0.24.2",
+    "wrangler": "^3.76.0"
   }
 }
