--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "crypto": "^1.0.1",
     "drizzle-orm": "^0.33.0",
     "hono": "^4.5.10",
-    "tell-js": "^1.0.0"
+    "tell-js": "^1.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
